--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apresentação - Carolina Cardoso Marques</title>
-    <link rel="stylesheet" href="styles/styles.css"/>
+    <link rel="stylesheet" href="styles/styles.css" />
 </head>
+
 <body>
-    <div>
-        <span>Carolina Cardoso Marques - FrontEnd</span>
+    <div class="container">
+        <div class="box">
+            <h1 class="title">Eleve seu negócio digital a outro nível <span style="color: #22D4FD;">com um Front-end de qualidade!</span></h1>
+
+            <span class="about_section">
+                <p>
+                    Olá! Sou Carolina Marques, desenvolvedora Front-end com experiência em React e Angular. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+                </p>
+            </span>
+
+            <div class="buttons">
+                <a class="button_style">
+                    Instagram
+                </a>
+                <a class="button_style">
+                    GitHub
+                </a>
+            </div>
+        </div>
+
+        <div class="photo_section">
+            <img src="images/me.jpg" alt="photo of mine">
+            <div class="decoration"></div>
+        </div>
     </div>
 </body>
+
 </html>
