--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </span>
 
             <div class="buttons">
-                <a class="button_style">
+                <a href="https://www.instagram.com/iamlinn__/" target="_blank" rel="noopener noreferrer" class="button_style">
                     Instagram
                 </a>
-                <a class="button_style">
-                    GitHub
+                <a href="https://www.linkedin.com/in/carolina-marques-9b52a4203/" target="_blank" rel="noopener noreferrer" class="button_style">
+                    LinkedIn
                 </a>
             </div>
         </div>
